syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/zcubbs/ssl-tracker";

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string access_token = 1;
  google.protobuf.Timestamp access_token_expires_at = 2;
}
